<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_person_128dp" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/user_name_default"
            android:textAppearance="@style/TextAppearance.PocketTheme.Subtitle2"
            android:textStyle="bold" />


        <TextView
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:id="@+id/txt_user_lp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_user_name"
            android:layout_centerHorizontal="true"
            android:text="@string/life_points"
            android:textAppearance="@style/TextAppearance.PocketTheme.Subtitle2"
            android:textStyle="italic" />

        <TextView
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:id="@+id/txt_user_xp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_user_lp"
            android:layout_centerHorizontal="true"
            android:text="@string/exp_points"
            android:textAppearance="@style/TextAppearance.PocketTheme.Subtitle2"
            android:textStyle="italic" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>